# melodii_1_Qt

./: CMakeLists.txt  main.cpp
headers/: GUI.h  Observable.h  Observer.h  TableModel.h  melodie.h  repository.h  service.h  tester.h
sources/: GUI.cpp  melodie.cpp  repository.cpp  service.cpp  tester.cpp
